# vdr_pi

./: CMakeLists.txt  Plugin.cmake  TEST-PLAN.md
cmake/: TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.vdr.yaml
manual/modules/ROOT/pages/: index.adoc  log_format.adoc
po/: POTFILES.in  POTFILES.in.test  vdr_pi.pot
src/: icons.cpp  icons.h  icons.sh  vdr_network.cpp  vdr_network.h  vdr_pi.cpp  vdr_pi.h  vdr_pi_control.cpp  vdr_pi_control.h  vdr_pi_prefs.cpp  vdr_pi_prefs.h  vdr_pi_prefs_net.cpp  vdr_pi_prefs_net.h  vdr_pi_time.cpp  vdr_pi_time.h
test/: CMakeLists.txt  mock_plugin_api.cpp  mock_plugin_api.h  plugin_tests.cpp  record_tests.cpp  time_tests.cpp
test/testdata/: NavMonPC-Hartmut.txt  data_with_comments.txt  hakan.txt  no_timestamps.txt  not_chronological.txt  test_recording.csv  with_timestamps.txt
